# rex_omni_ros

./: .gitignore  mypy.ini  pixi.toml
.github/workflows/: ci.yml
rex_omni_msgs/srv/: Detect.srv  DetectKeypoints.srv  DetectWithVisualPrompt.srv  Point.srv  RecognizeText.srv
rex_omni_ros/: package.xml
rex_omni_ros/config/: rex_omni_ros1.yaml  rex_omni_ros2.yaml
rex_omni_ros/src/rex_omni_ros/: compat.py  conversions.py  handlers.py  node.py
rex_omni_ros/src/rex_omni_ros/core/: engine.py  mock.py  visualization.py
rex_omni_ros/test/gpu/: test_e2e.py
rex_omni_ros/test/integration/: test_services_ros1.py  test_services_ros2.py  util.py
rex_omni_ros/test/unit/: test_conversions.py  test_engine.py  test_visualization.py
rex_omni_ros_python/config/: rex_omni_ros1.yaml  rex_omni_ros2.yaml
rex_omni_ros_python/src/rex_omni_ros/: node.py
rex_omni_ros_python/src/rex_omni_ros/core/: engine.py
