<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rex_omni_ros</name>
  <version>0.1.0</version>
  <description>ROS service node providing Rex-Omni visual perception via in-process vLLM inference.</description>
  <maintainer email="noy@abc-net.jp">0xNOY</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>

  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>
  <exec_depend>rex_omni_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
